; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt = type { i32 }

@BNXT_STATE_OPEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnxt*, i32)* @bnxt_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnxt_reset(%struct.bnxt* %0, i32 %1) #0 {
  %3 = alloca %struct.bnxt*, align 8
  %4 = alloca i32, align 4
  store %struct.bnxt* %0, %struct.bnxt** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.bnxt*, %struct.bnxt** %3, align 8
  %6 = call i32 @bnxt_rtnl_lock_sp(%struct.bnxt* %5)
  %7 = load i32, i32* @BNXT_STATE_OPEN, align 4
  %8 = load %struct.bnxt*, %struct.bnxt** %3, align 8
  %9 = getelementptr inbounds %struct.bnxt, %struct.bnxt* %8, i32 0, i32 0
  %10 = call i64 @test_bit(i32 %7, i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.bnxt*, %struct.bnxt** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @bnxt_reset_task(%struct.bnxt* %13, i32 %14)
  br label %16

16:                                               ; preds = %12, %2
  %17 = load %struct.bnxt*, %struct.bnxt** %3, align 8
  %18 = call i32 @bnxt_rtnl_unlock_sp(%struct.bnxt* %17)
  ret void
}

declare dso_local i32 @bnxt_rtnl_lock_sp(%struct.bnxt*) #1

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @bnxt_reset_task(%struct.bnxt*, i32) #1

declare dso_local i32 @bnxt_rtnl_unlock_sp(%struct.bnxt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
